Eclipse/workspace/.metadata/.plugins/org.eclipse.cdt.ui/logTool.build.log
14:37:04 **** Incremental Build of configuration Debug for project logTool ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o LogTool.o "..\\LogTool.cpp" 
..\LogTool.cpp: In member function 'int n_log::LogTool::PRINT_LOG(n_log::LOG_LEVEL, std::string)':
..\LogTool.cpp:88:8: error: 'LOG_LEVEL' is not a class or namespace
   case LOG_LEVEL::LOG_COMM:
        ^
..\LogTool.cpp:93:8: error: 'LOG_LEVEL' is not a class or namespace
   case LOG_LEVEL::LOG_DEBUG :
        ^
..\LogTool.cpp:99:8: error: 'LOG_LEVEL' is not a class or namespace
   case LOG_LEVEL::LOG_ERROR :
        ^

14:37:05 Build Finished (took 514ms)

